Converted to Java8 on request from #77 and #80